# test-rep

./: #mnt#c#МГТУ#_Технопарк#try_2#Cpp#test_code#test_git#fib_lib#src#fib.cpp.gcov  #mnt#c#МГТУ#_Технопарк#try_2#Cpp#test_code#test_git#tests#test_fib.cpp.gcov  #usr#include#c++#9#bits#alloc_traits.h.gcov  #usr#include#c++#9#bits#basic_string.h.gcov  #usr#include#c++#9#bits#basic_string.tcc.gcov  #usr#include#c++#9#bits#char_traits.h.gcov  #usr#include#c++#9#bits#move.h.gcov  #usr#include#c++#9#bits#stl_iterator_base_funcs.h.gcov  #usr#include#c++#9#bits#stl_iterator_base_types.h.gcov  #usr#include#c++#9#bits#unique_ptr.h.gcov  #usr#include#c++#9#ext#alloc_traits.h.gcov  #usr#include#c++#9#ext#new_allocator.h.gcov  #usr#include#c++#9#ext#type_traits.h.gcov  #usr#include#c++#9#tuple.gcov  #usr#include#gtest#gtest-printers.h.gcov  #usr#include#gtest#gtest.h.gcov  #usr#include#gtest#internal#gtest-internal.h.gcov  A.txt  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Makefile  README.md  main.cpp
.github/workflows/: main.yml
fib_lib/: CMakeLists.txt
fib_lib/include/: fib.h  stdafx.h
fib_lib/src/: fib.cpp
fib_lib/tests/: CMakeLists.txt
linters/: run.sh
tests/: CMakeLists.txt  test_fib.cpp
